--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ services:
   # db:
   #   image: mysql:latest
   web:
+    container_name: notebook
     build: .
     command: rails s -p 3000 -b '0.0.0.0'
     volumes:
-      - /src:/src
+      - ./src:/src
     ports:
       - "3000:3000"
     # depends_on:
